--- a/app/component/Footer.css
+++ b/app/component/Footer.css
@@ -5,7 +5,7 @@
     height: 64;
     background-color:#161619;
     padding: 8px 10px;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 .footerimg{
